...
            val s = strokes.getJSONObject(index)
            val points = s.getJSONArray("points")
            Stroke(List(points.length()) { i -> points.getJSONArray(i).let { Point(it.getDouble(0).toFloat(), it.getDouble(1).toFloat()) } },
                s.getInt("color"), s.getDouble("width").toFloat())
        },
        List(notes.length()) { index -> notes.getJSONObject(index).let {
            Note(it.getInt("id"), Point(it.getDouble("x").toFloat(), it.getDouble("y").toFloat()), it.getString("text"))
        } },
        json.getInt("nextNoteId")
    )
}

